--- a/ListaTareasDavidAlvarez/Resources/Styles/Colors.xaml
+++ b/ListaTareasDavidAlvarez/Resources/Styles/Colors.xaml
@@ -12,6 +12,15 @@
     <Color x:Key="Secondary">#DFD8F7</Color>
     <Color x:Key="SecondaryDarkText">#9880e5</Color>
     <Color x:Key="Tertiary">#2B0B98</Color>
+   
+    <Color x:Key="PageBackgroundColor">#F3F4F6</Color>
+    <Color x:Key="PrimaryTextColor">#333333</Color>
+    <Color x:Key="SecondaryTextColor">#555555</Color>
+    <Color x:Key="AccentColor">#4CAF50</Color>
+    <Color x:Key="ListBackgroundColor">#FFFFFF</Color>
+
+        
+        
 
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
