--- a/ListaTareasDavidAlvarez/MVVM/Vista/DetallesTareas.xaml
+++ b/ListaTareasDavidAlvarez/MVVM/Vista/DetallesTareas.xaml
@@ -2,11 +2,25 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ListaTareasDavidAlvarez.MVVM.Vista.DetallesTareas"
-             Title="DetallesTareas">
+             Title="Detalle de mi tarea">
     <StackLayout Padding="10">
         <Entry Text="{Binding Nombre}" Placeholder="Nombre de la tarea" />
-        <Button Text="Eliminar Tarea" Command="{Binding EliminarTareaCommand}" CommandParameter="{Binding TareaSeleccionada}" />
-        <Button Text="Volver" Clicked="OnBackButtonClicked" />
-        <Button Text="Guardar" Clicked="OnSaveClicked" />
+        <Switch IsToggled="{Binding TareaSeleccionada.Completada}"/>
+        <Button Text="Volver" 
+                Clicked="OnBackButtonClicked" 
+                BackgroundColor="#007AFF"
+                TextColor="White"
+                FontSize="18"
+                CornerRadius="10"
+                Margin="0,20,0,0"
+                HeightRequest="50"/>
+        <Button Text="Guardar" 
+                Clicked="OnSaveClicked" 
+                BackgroundColor="Green"
+                TextColor="White"
+                FontSize="18"
+                CornerRadius="10"
+                Margin="0,20,0,0"
+                HeightRequest="50"/>
     </StackLayout>
 </ContentPage>
